--- a/events_upcoming.Rmd
+++ b/events_upcoming.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Basel Biometric Section (BBS)"
+title: "Basel Biometric Section (BBS): Upcoming events"
 author: ""
 date: '`r Sys.setlocale("LC_TIME", "C"); format(Sys.Date(), "%d %b %Y")`'
 output: 
@@ -20,30 +20,4 @@ for (i in 1:length(packs.html)){library(packs.html[i], character.only = TRUE)}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-# Basel Biometrics Society
-
-## Purpose
-
-The Basel Biometric Section is part of the ROeS, the [Austrian Swiss Region](https://www.ibs-roes.org/) of the [International Biometric Society](https://www.biometricsociety.org/) (IBS). BBS is an independent, non-profit organization which provides a forum for discussions of how to apply statistical methods in biological and medical science.
-
-## President
-
-[Hans Ulrich Burger](mailto:hans_ulrich.burger@roche.com), F. Hoffmann-La Roche, Basel.
-
-## Board
-
-Give names
-
-## Newsletter
-
-If you would like to receive announcements of upcoming events please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
-
 # Upcoming events
-
-# Past events
-
-Agendas, slidedecks, and recordings (where available) of BBS events since 2009 are available [here](events.html).
-
-# Archive of past events
-
-[Old BBS webpage](http://bbs.ceb-institute.org/)
