--- a/tools/conf1.Rmd
+++ b/tools/conf1.Rmd
@@ -13,7 +13,8 @@ meta <- tab[1,]
 `r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
 
 ```{r echo = FALSE}
-tab2 <- data.frame(cbind(select(tab, speaker, company, title), paste("[link](talks/", select(tab, "date"), "/", select(tab, slides)[, 1], ")", sep = "")))
+repl <- gsub(pattern = "\\.", x = select(tab, "date")[1, 1], replacement = "")
+tab2 <- data.frame(cbind(select(tab, speaker, company, title), paste("[link](talks/", repl, "/", select(tab, slides)[, 1], ")", sep = "")))
 colnames(tab2) <- c("Speaker", "Institution", "Title", "Download slides")
 kable(tab2)
 ```
