--- a/index.Rmd
+++ b/index.Rmd
@@ -34,5 +34,5 @@ The Basel Biometric Society (BBS) is a section of the ROeS, the [Austrian Swiss 
 
 If you would like to receive announcements of upcoming events please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
 
-![](bbs_logo.jpg)  
+![](bbs_logo.gif)  
 
