--- a/events_upcoming.Rmd
+++ b/events_upcoming.Rmd
@@ -24,7 +24,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## upcoming   
 path <- getwd()
 upcoming <- as.data.frame(read_excel(paste(path, "/data/upcoming.xlsx", sep = ""), col_types = NULL))
-upcoming$Registration <- paste("[Recording](", select(upcoming, Registration)[, 1], ")", sep = "")
+upcoming$Registration <- paste("[Registration](", select(upcoming, Registration)[, 1], ")", sep = "")
 upcoming$Agenda <- paste("[Agenda](", select(upcoming, Agenda)[, 1], ")", sep = "")
 
 upcoming[is.na(upcoming)] <- ""
