--- a/tools/trainings1.Rmd
+++ b/tools/trainings1.Rmd
@@ -8,7 +8,7 @@ meta <- tab[1,]
 
 # `r paste(as.character(meta$date), ": ", meta$seminar_title, sep = "")` {-}
 
-[Program](`r paste("trainings/", rdate[i], "/agenda.pdf", sep = "")`)
+`r if ("agenda.pdf" %in% list.files(paste("trainings/", rdate[i], "/", sep = ""))){paste("[Program](trainings/", rdate[i], "/agenda.pdf)", sep = "")} else {"No agenda available"}`
 
 `r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
 
