--- a/events_upcoming.Rmd
+++ b/events_upcoming.Rmd
@@ -26,17 +26,19 @@ path <- getwd()
 upcoming <- as.data.frame(read_excel(paste(path, "/data/upcoming.xlsx", sep = ""), col_types = NULL))
 
 # prepare date strings
-dates <- unique(select(upcoming, Date))[, 1]
+dates <- unique(select(upcoming, date))[, 1]
 d <- substr(dates, 1, 2)
 m <- substr(dates, 4, 5)
 y <- substr(dates, 7, 11)
 
 rdate <- paste(y, m, d, sep = "")
 
-upcoming$Registration <- paste("[Registration](", select(upcoming, Registration)[, 1], ")", sep = "")
-upcoming$Agenda <- paste("[Agenda](talks/", rdate, "/agenda.pdf)", sep = "")
+upcoming$Registration <- paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = "")
+upcoming$Agenda <- paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = "")
 
 upcoming[is.na(upcoming)] <- ""
+
+upcoming <- select(upcoming, date, event, type, Agenda, Registration) %>% rename("Date" = date, "Event" = event, "Type of event" = type)
 ```
 
 ```{r, include=TRUE, echo=FALSE}
