--- a/index.Rmd
+++ b/index.Rmd
@@ -22,12 +22,14 @@ Hans Ulrich Burger, F. Hoffmann-La Roche, Basel.
 
 If you would like to receive e-mail announcements of upcoming events please send an email to [Bibiana Blatna](mailto:bibiana.blatna@novartis.com).
 
+<center>![](bbs_logo.gif)</center>
+
 # News on this site
 
+* 2022/03/15: Added announcement of [seminar on "Graphical approaches to multiple test problems"](events_upcoming.html).
 * 2022/02/28: Added new version of [statutes](data/BBS_Statutes.pdf) with minor updates.
 * 2022/02/01: Added announcement of [machine learning training](events_upcoming.html).
 
-<center>![](bbs_logo.gif)</center>
 
 
 
