--- a/docs/tools/seminars1.Rmd
+++ b/docs/tools/seminars1.Rmd
@@ -6,11 +6,13 @@ tab <- filter(talks, date == dates[i])
 meta <- tab[1, ]
 ```
 
-# `r paste(as.character(meta$date), ": ", meta$seminar_title, sep = "")` {-}
+# `r paste(as.character(meta$date), ": ", meta$seminar_title, sep = "")` {-} 
 
 `r if ("agenda.pdf" %in% list.files(paste("talks/", rdate[i], "/", sep = ""))){paste("[Agenda](talks/", rdate[i], "/agenda.pdf)", sep = "")} else {"No agenda available"}`
 
 `r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
+
+`r if (is.na(select(meta, recording2)) == FALSE){paste("[Recording 2](", select(meta, recording2)[, 1], ")", sep = "")} else {"No recording available"}`
 
 `r if (is.na(select(meta, summary)) == FALSE){paste("[Summary of the event](", rdate[i], "_summary.html)", sep = "")}`
 
