--- a/docs/tools/trainings1.Rmd
+++ b/docs/tools/trainings1.Rmd
@@ -12,6 +12,8 @@ meta <- tab[1,]
 
 `r if (is.na(select(meta, recording)) == FALSE){paste("[Recording](", select(meta, recording)[, 1], ")", sep = "")} else {"No recording available"}`
 
+`r if (is.na(select(meta, recording2)) == FALSE){paste("[Recording 2](", select(meta, recording2)[, 1], ")", sep = "")}`
+
 ```{r echo = FALSE}
 tab2 <- data.frame(cbind(select(tab, speaker, company, title), paste("[link](trainings/", rdate[i], "/", select(tab, slides)[, 1], ")", sep = "")))
 colnames(tab2) <- c("Speaker", "Institution", "Title", "Download slides")
