--- a/events_upcoming.Rmd
+++ b/events_upcoming.Rmd
@@ -33,12 +33,12 @@ y <- substr(dates, 7, 11)
 
 rdate <- paste(y, m, d, sep = "")
 
-upcoming$Registration <- paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = "")
+upcoming$Registration <- ifelse(is.na(select(upcoming, registration)[, 1]), "", paste("[Registration](", select(upcoming, registration)[, 1], ")", sep = ""))
 upcoming$Agenda <- paste("[Agenda](upcoming/", rdate, "/agenda.pdf)", sep = "")
 
 upcoming[is.na(upcoming)] <- ""
 
-upcoming <- select(upcoming, date, event, type, Agenda, Registration) %>% rename("Date" = date, "Event" = event, "Type of event" = type)
+upcoming <- select(upcoming, date, event, type, Agenda, Registration, comment) %>% rename("Date" = date, "Event" = event, "Type of event" = type, "Comment" = comment)
 ```
 
 ```{r, include=TRUE, echo=FALSE}
