--- a/index.Rmd
+++ b/index.Rmd
@@ -26,6 +26,7 @@ If you would like to receive e-mail announcements of upcoming events please send
 
 # News on this site
 
+* 2022/03/21: Added 2nd announcement of [seminar on "Registry studies and HTA"](events_upcoming.html).
 * 2022/05/13: Location has changed for [spring seminar on "Transforming drug development" and bi-yearly BBS assembly](events_upcoming.html). Note, the new location is: Novartis Campus, Auditorium 510_U1
 * 2022/04/20: Training on advanced group-sequential and adaptive confirmatory clinical trial designs, with R practicals using rpact is FULLY BOOKED.
 * 2022/04/11: Added announcement of [spring seminar on "Transforming drug development"](events_upcoming.html).
